--- a/ShoppingAppp/app/src/main/res/layout/activity_did_click_item.xml
+++ b/ShoppingAppp/app/src/main/res/layout/activity_did_click_item.xml
@@ -49,6 +49,7 @@
             android:layout_alignParentRight="true"
             android:layout_marginRight="30dp"
             android:layout_marginTop="8dp"/>
+
         <TextView
             android:id="@+id/dc_tvNumberItemInCart"
             android:layout_width="20dp"
@@ -56,9 +57,13 @@
             android:background="@android:drawable/ic_notification_overlay"
             android:text="0"
             android:textAlignment="center"
+            android:layout_toRightOf="@id/dc_bCart"
+            android:layout_marginLeft="-45dp"
+            android:layout_marginTop="5dp"
             android:textColor="#fff"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
+
+
         <ImageButton
             android:id="@+id/dc_bMenu"
             android:layout_width="30dp"
@@ -88,6 +93,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="Omega 50 Watch"
+                android:textAlignment="center"
                 android:textColor="#444444"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -180,6 +186,7 @@
 
 
     </RelativeLayout>
+
 
 
 </ScrollView>
