--- a/ShoppingAppp/app/src/main/res/layout/activity_did_click_item.xml
+++ b/ShoppingAppp/app/src/main/res/layout/activity_did_click_item.xml
@@ -13,8 +13,9 @@
         android:layout_height="wrap_content">
 
         <ImageView
+            android:scaleType="centerCrop"
             android:id="@+id/dc_iMainImg"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="170dp"
             android:background="@drawable/dc_drap_main_item" />
         <EditText
